feat:add postProduct
