# backend/api/src/product-service/handler.ts
@@ -1,3 +1,4 @@
-import { getProductsById } from "./src/handlers/getProductsById";
-import { getProductsList } from "./src/handlers/getProductsList";
-export { getProductsList, getProductsById };
+import { getProductsById } from './src/handlers/getProductsById';
+import { getProductsList } from './src/handlers/getProductsList';
+import { postProduct } from './src/handlers/postProduct';
+export { getProductsById, getProductsList, postProduct };
